[package]
name = "rb62-wasm"
version = "0.1.0"
authors = ["Fuyang Liu <fuyangl@spotify.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.58"
js-sys = "0.3.35"
rb62 = { git = 'https://github.com/liufuyang/rb62.git' }
